make sure code blocks overflow naturally

--- a/sass/global/_universal.scss
+++ b/sass/global/_universal.scss
@@ -35,4 +35,5 @@ code {
 pre {
 	background-color: $light-gray;
 	padding: 0.5em 1em;
+	overflow-x: auto;
 }
